manifest/objects/Quotas__c.object
<CustomObject>
    <fields>
        <fullName>ARR_Quotas_Amount__c</fullName>
        <label>ARR Quotas Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Total_ARR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sub total for all Est. Annual Recurring Revenue (ARR)</description>
        <label>Current Total ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Total_IYR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Current Sub total for Est. In Year Revenue (IYR)</description>
        <label>Current Total IYR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <label>Ending Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IYR_Quotas_Amount__c</fullName>
        <label>IYR Quotas Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotas_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotas Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotas_Period__c</fullName>
        <formula>TEXT(Starting_Date__c) + &apos;-&apos; + TEXT(Ending_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotas Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <label>Starting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Quotas</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quotas_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>